--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
                 script{
                     sh '''
                     echo 'Push to Repo'
-                    docker push anilsree/abhishekf5
+                    docker push anilsree/abhishekf5:${BUILD_NUMBER}
                     '''
                 }
             }
