--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -57,7 +57,7 @@ pipeline {
                         git add deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline'
                         git remote -v
-                        git push https://github.com/avskr06/cicd-demo-manifests-repo.git HEAD:main
+                        git push https://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@github.com/avskr06/cicd-demo-manifests-repo.git HEAD:main
                         '''                        
                     }
                 }
